--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       // will "boot" the module and make it ready to use. Currently browsers
       // don't support natively imported WebAssembly as an ES module, but
       // eventually the manual initialization won't be required!
-      import init from './pkg/canvas.js';
+      import init from './target/canvas.js';
 
       async function run() {
         await init();
